--- a/index.html
+++ b/index.html
@@ -1894,5 +1894,19 @@
             saveTasks();
         }
     </script>
+    <footer>
+  &copy; 2025 ClearioTask | Version 1.0.3 | Developed by <strong>Climb Art Tech</strong>
+</footer>
+
+<style>
+  footer {
+    background: #222;
+    color: #fff;
+    text-align: center;
+    padding: 15px;
+    font-family: Arial, sans-serif;
+  }
+</style>
+
 </body>
 </html>
