--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,7 @@
             saveTasks();
         }
     </script>
-    <footer>
+    <footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   &copy; 2025 ClearioTask | Version 1.0.3 | Developed by <strong>Climb Art Tech</strong>
 </footer>
 
