--- a/index.html
+++ b/index.html
@@ -1893,8 +1893,8 @@
                
             saveTasks();
         }
-    </script>
-    <footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </script><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <footer>
   &copy; 2025 ClearioTask | Version 1.0.3 | Developed by <strong>Climb Art Tech</strong>
 </footer>
 
