--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
 
         <div class="task-input-container">
             <span class="task-input-icon">+</span>
-            <input type="text" class="task-input" id="task-input" placeholder="Add a new task... (try 'Meeting tomorrow 5pm')">
+            <input type="text" class="task-input" id="task-input" placeholder="Try 'Meeting tomorrow 5pm')">
             <button class="voice-input-btn" id="voice-input-btn" title="Voice Input">🎤</button>
         </div>
 
