--- a/index.html
+++ b/index.html
@@ -856,14 +856,27 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Firebase configuration (replace with your actual Firebase config)
-            const firebaseConfig = {
-                apiKey: "YOUR_API_KEY",
-                authDomain: "your-app.firebaseapp.com",
-                projectId: "your-app",
-                storageBucket: "your-app.appspot.com",
-                messagingSenderId: "YOUR_SENDER_ID",
-                appId: "YOUR_APP_ID"
-            };
+            // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBg0Q5u5HFcN2-g4pDRfzOlCsi05EqERwM",
+  authDomain: "create-project-bc9f6.firebaseapp.com",
+  projectId: "create-project-bc9f6",
+  storageBucket: "create-project-bc9f6.firebasestorage.app",
+  messagingSenderId: "192418533849",
+  appId: "1:192418533849:web:78cebf94feb3a29c8d09c8",
+  measurementId: "G-K8MQEXZHKP"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
             
             // Initialize Firebase
             let messaging = null;
