--- a/index.html
+++ b/index.html
@@ -858,16 +858,16 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // Firebase configuration (replace with your actual Firebase config)
-            const firebaseConfig = {
-                apiKey: "AIzaSyBg0Q5u5HFcN2-g4pDRfzOlCsi05EqERwM",
-                authDomain: "create-project-bc9f6.firebaseapp.com",
-                projectId: "create-project-bc9f6",
-                storageBucket: "create-project-bc9f6.firebasestorage.app",
-                messagingSenderId: "192418533849",
-                appId: "1:192418533849:web:78cebf94feb3a29c8d09c8",
-                measurementId: "G-K8MQEXZHKP"
-            };
+           // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBg0Q5u5HFcN2-g4pDRfzOlCsi05EqERwM",
+  authDomain: "create-project-bc9f6.firebaseapp.com",
+  projectId: "create-project-bc9f6",
+  storageBucket: "create-project-bc9f6.firebasestorage.app",
+  messagingSenderId: "192418533849",
+  appId: "1:192418533849:web:78cebf94feb3a29c8d09c8",
+  measurementId: "G-K8MQEXZHKP"
+};
             
             // Initialize Firebase
             let messaging = null;
