--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-messaging-compat.js"></script>
     <style>
         :root {
-            --primary-color: #DE3163;
+            --primary-color: #6a1f26;
             --secondary-color: #4CAF50;
             --background-color: #f8f9fa;
             --card-color: #ffffff;
@@ -26,7 +26,7 @@
         }
 
         .dark-theme {
-            --primary-color: #800020;
+            --primary-color: #6a1f26;
             --secondary-color: #66BB6A;
             --background-color: #121212;
             --card-color: #1e1e1e;
